--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "private": true,
-    "type": "module",
+    "type": "commonjs",
     "scripts": {
         "dev": "vite",
         "build": "vite build"
@@ -8,6 +8,7 @@
     "devDependencies": {
         "autoprefixer": "^10.4.2",
         "axios": "^0.27",
+        "laravel-mix-mjml": "^4.0.1",
         "laravel-vite-plugin": "^0.8.1",
         "lodash": "^4.17.19",
         "sass": "^1.55.0",
